static/src/stylesheets/module/_crosswords.scss
.crossword__grid__cell {
    fill: #ffffff;
}

.crossword__grid__cell--highlighted {
    fill: $c-crosswordAccent2;
}

.crossword__grid__cell--focussed {
    fill: $c-crosswordAccent1;
}

.crossword__grid__cell__number {
    font-size: 8px;
    font-family: $f-sans-serif-text;
    text-anchor: top;
    dominant-baseline: left;
}

.crossword__grid__cell__entry {
    display: inline-block;
    font-size: 14px;
    font-family: $f-serif-text;
    font-weight: 800;
    text-anchor: middle;
    dominant-baseline: center;
}

.crossword__clues__clue {
    list-style: none;
}

.crossword__clues__clue__number {
    display: inline-block;
    min-width: 20px;
    margin-right: $gs-baseline;
}

.crossword__clues__clue--answered .crossword__clues__clue__text {
    text-decoration: line-through;
}

.crossword__clues__header {
    font-weight: 800;
}

.crossword__clues {
    margin-top: 1rem;
}

.crossword__grid-wrapper {
    position: relative;
}

.crossword__hidden-input-wrapper {
    position: absolute;
    overflow: hidden;
    width: 0;
}

.crossword__hidden-input {
    opacity: 0;
}

